--- a/src/App.css
+++ b/src/App.css
@@ -23,14 +23,16 @@ table {
   overflow-y: scroll;
   overflow-x: scroll;
 } 
-
+tr td{
+  background-color: transparent;
+}
 .threedots{
   border: #fff !important;
   border-radius: 0% !important;
   background-color: transparent;
 }
 .need-color-change{
-  background-color: #f5f7fa;
+  background-color: #8197b9;
 }
 footer {
     background-color: #222;
